--- a/app/index.jade
+++ b/app/index.jade
@@ -7,66 +7,25 @@ html
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.css')
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     link(rel='stylesheet', href='styles/main.css')
-    link(rel='stylesheet', href='styles/example.css')
 
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-    script(src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js")
+    script(src='http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js')
     script(src='vendor/jquery-dateFormat/jquery-dateFormat.min.js')
     script(src='scripts/jquery.ra-calendar.js')
+
+    link(rel='stylesheet', href='styles/example.css')
     script(src='example.js')
+
   body
-    nav.navbar.navbar-default(role='navigation')
-      .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#ra-calendar-example-menu')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand.logo(href='#') Ra Calendar
+    include jade/menu
+    include jade/header
 
-        #ra-calendar-example-menu.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li.active
-              a(href='#') Link
-            li
-              a(href='#') Link
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Dropdown
-                b.caret
-              ul.dropdown-menu
-                li
-                  a(href='#') Action
-                li
-                  a(href='#') Another action
-                li
-                  a(href='#') Something else here
-                li.divider
-                li
-                  a(href='#') Separated link
-                li.divider
-                li
-                  a(href='#') One more separated link
+    .container.content
+      .panel.panel-default
+        .panel-body
+          #ra-calendar tryrt
 
-          ul.nav.navbar-nav.navbar-right
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Contacts
-                b.caret
-              ul.dropdown-menu
-                li
-                  a(href='mailto:arthur.creek@gmail.com', target='_blank') Email
-                li.divider
-                li
-                  a(href='#') Separated link
+      a(name='get-started')
 
-    header
-      .container
-
-    .container
-      h1 RA CALENDAR
-      h3 Bootstrap 3 + jQuery UI
-      #ra-calendar
-      p new
+    include jade/footer
