--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,14 +1,14 @@
 @import 'compass/css3'
 
-.rac-root
+.ra-root
   display: block
 
-.rac-header
+.ra-header
   background: #ffcaca
   padding: 5px
-.rac-resources
+.ra-resources
   background: #c2ccd1
   padding: 5px
-.rac-content
+.ra-content
   padding: 5
   background: #c6e746
