gulp coffee, jade, sass, concat

--- a/app/index.jade
+++ b/app/index.jade
@@ -24,7 +24,7 @@ html
     .container.content
       .panel.panel-default
         .panel-body
-          #ra-calendar tryrt
+          #ra-calendar Example text
 
       a(name='get-started')
 
