--- a/app/styles/example.sass
+++ b/app/styles/example.sass
@@ -5,7 +5,7 @@ $color-header: #C13C1B
 $color-footer: #002255
 
 .logo
-  background: url(../images/logo.png) 15px center no-repeat
+  background: url('../images/logo.png') 15px center no-repeat
   height: 50px
   width: 240px
   padding-left: 85px
