--- a/app/index.jade
+++ b/app/index.jade
@@ -8,11 +8,11 @@ html
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     link(rel='stylesheet', href='styles/main.css')
 
-    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-    script(src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+    script(src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js')
     script(src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     script(src='vendor/jquery-dateFormat/jquery-dateFormat.min.js')
-    script(src='scripts/jquery.ra-calendar.js')
+    script(src='jquery.ra-calendar.js')
 
     link(rel='stylesheet', href='styles/example.css')
     script(src='example.js')
