full, but troubles with clean task

--- a/app/index.jade
+++ b/app/index.jade
@@ -4,6 +4,7 @@ html
     meta(charset='utf-8')
     title RA CALENDAR
 
+    link(rel='icon', href='images/favicon.png')
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css')
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     link(rel='stylesheet', href='styles/main.css')
